Fix: Change body height to not overflow screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ li {
 @media screen and (min-width: 768px) {
     body {
         background-image: url('../images/seedlings.webp');
-        height: 100vh;
+        height: 100%;
     }
 
     
